# TUP-Engineer-2023

./: README.md  WatchDog.sh
src/: README.md
src/camera_driver/: CMakeLists.txt  README.md  package.xml
src/camera_driver/config/: camera.yaml  camera.yml
src/camera_driver/include/: usb_cam.hpp  usb_cam_pub.hpp
src/camera_driver/launch/: usb_cam_driver.launch.py
src/camera_driver/src/: usb_cam.cpp  usb_cam_pub.cpp
src/engineer_adjust_stone/: CMakeLists.txt  README.md  package.xml
src/engineer_adjust_stone/include/: stone_control.hpp  stone_control_node.hpp
src/engineer_adjust_stone/launch/: stone_control.launch.py
src/engineer_adjust_stone/src/: stone_control.cpp  stone_control_node.cpp
src/engineer_arm_control/: CMakeLists.txt  package.xml
src/engineer_arm_control/engineer_config/: CMakeLists.txt  package.xml
src/engineer_arm_control/engineer_middle_processor/: CMakeLists.txt  package.xml
src/engineer_arm_control/engineer_middle_processor/include/: middle_processor.hpp  middle_processor_node.hpp
src/engineer_arm_control/engineer_middle_processor/src/: middle_processor.cpp  middle_processor_node.cpp
src/engineer_arm_control/launch/: engineer_config.launch.py
src/engineer_arm_control/src/engineer_middle_processor/include/: middle_processor_node.hpp
src/engineer_arm_control/src/engineer_middle_processor/launch/: middle_processor.launch.py
src/engineer_arm_control/src/engineer_middle_processor/src/: middle_processor.cpp
src/engineer_arm_control/urdf/: engineer.urdf  engineer.urdf.xacro
src/engineer_exchange_stone/: CMakeLists.txt  package.xml
src/engineer_exchange_stone/include/: detector.hpp  detector_node.hpp  inference.hpp
src/engineer_exchange_stone/launch/: stone_station_detector.launch.py
src/engineer_exchange_stone/launch/global_interface/msg/: Stone.msg  Target.msg
src/engineer_exchange_stone/model/: yolox_2.onnx  yolox_3.onnx  yolox_last.onnx
src/engineer_exchange_stone/src/: detector.cpp  detector_node.cpp  inference.cpp
src/engineer_stone_control/: package.xml
src/engineer_stone_control/src/: stone_control.cpp
src/engineer_stone_station_detector/: README.md  package.xml
src/engineer_stone_station_detector/include/: detector.hpp  detector_node.hpp  inference.hpp
src/engineer_stone_station_detector/launch/: stone_station_detector.launch.py
src/engineer_stone_station_detector/model/: yolox 222222.onnx  yolox.onnx  yolox_.mapping  yolox_.xml  yolox_1.onnx  yolox_11111.onnx  yolox_best.onnx
src/engineer_stone_station_detector/src/: detector_node.cpp  inference.cpp
src/enginner_stone_control/: CMakeLists.txt
src/enginner_stone_control/include/: Debug.hpp  stone_control_node.hpp
src/enginner_stone_control/src/: stone_control.cpp  stone_control_node.cpp
src/global_interface/: CMakeLists.txt  README.md  package.xml
src/global_interface/msg/: Gimbal.msg  Serial.msg  Target.msg  Target_station.msg  Transform.msg
src/global_user/: CMakeLists.txt  README.md  package.xml
src/global_user/config/: camera.yaml  camera_ros.yaml  stone_station.yaml
src/global_user/include/: coordsolver.hpp  global_user.hpp
src/global_user/launch/: engineer_exchange_stone_bringup.launch.py
src/global_user/src/: coordsolver.cpp  coordsover.cpp  global_user.cpp
src/serialport/: CMakeLists.txt  README.md  package.xml
src/serialport/include/: CRC_Check.hpp  data_transform.hpp  serialport.h  serialport.hpp  serialport_node.hpp
src/serialport/launch/: serialport.launch.py
src/serialport/src/: CRC_Check.cpp  data_transform.cpp  serialport.cpp  serialport_node.cpp
src/stone_station_detector/: CMakeLists.txt
src/stone_station_detector/include/: detector.hpp  detector_node.hpp  inference.hpp
src/stone_station_detector/src/: detector.cpp  detector_node.cpp  inference.cpp
