<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stone_station_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lyh15940645195@gmail.com">liyuhang</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>OpenCV</depend>
  <depend>rclcpp_components</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>OpenVINO</depend>
  <depend>Ceres</depend>
  <depend>Eigen3</depend>
  <depend>global_interface</depend>
  <depend>global_user</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>